fix: reload error + loading screen

--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,16 @@
 			AgroGeo - badania gruntu, klasyfikacja gruntów, geodezja, druk
 			wielkoformatowy
 		</title>
-
+		<meta
+			name="description"
+			content="AgroGeo - badania gruntu, klasyfikacja gruntów, geodezja, druk wielkoformatowy. Usługi świadczymy na terenie całej Polski."
+		/>
+		<meta
+			name="keywords"
+			content="agrogeo, badania gruntu, klasyfikacja gruntów, druk wielkoformatowy"
+		/>
+		<meta name="author" content="Mikołaj Borowski" />
+		<meta name="copyright" content="AgroGeo Grzegorz Stasiak" />
 		<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
 		<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
 		<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
